--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Lucas Deep Learning Space
-logo: https://avatars.githubusercontent.com/u/3506856?v=4
+logo: ./3x4.jpg
