--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Lucas Deep Learning Space
-description: Tests and experiments using software Learning techniques
+description: Tests and experiments using Machine Learning techniques
 logo: ./3x4.jpg
